--- a/.HTML
+++ b/.HTML
@@ -90,13 +90,11 @@
         <dt><b>Butter</b></dt>
         <dd><b>Adds moisture and richness to the cake.</b></dd>
     </dl>
-
+ <br>
+    <h2>Hyperlink</h2>
+    <a href="https://pk.linkedin.com/in/suman-mazhar-aa936133b"target="_blank">
+        visit linkdin profile</a><br>
+  <a href="https://www.instagram.com/suman.zehra1?igsh=MXF2aTdhMXZxMmdrMQ=="target="_blank">
+        click here to see instagram profile</a><br>
 </body>
 </html>
-
-
-
-
-
-
-
